--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.16</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
@@ -66,6 +71,7 @@
       <version>2.3.1</version>
     </dependency>
   </dependencies>
+
   <build>
     <plugins>
       <plugin>
